--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,20 @@
 header .header-top{
     background-color: rgb(46, 0, 0);
 }
+.header-content .row{
+    position: relative;
+}
+.header-content .row .menu{
+    background-color: #4c4c4c;
+    width: 85%;
+    box-sizing: border-box;
+    position: absolute;
+    top: 80%;
+    margin: auto;
+}
+.menu .menu-content{
+    width: 120px;
+}
 
 
 /* homepage */
@@ -12,17 +26,7 @@ header .header-top{
     background-position: center;
     position: relative;
 }
-.home .menu{
-    background-color: #4c4c4c;
-    margin-top: -10px;
-    width: 85%;
-    position: absolute;
-    bottom: 18;
-    box-sizing: border-box;
-}
-.menu .menu-content{
-    width: 120px;
-}
+
 .btn{
     margin-top: 20px;
 }
@@ -66,6 +70,9 @@ footer{
     max-width: 300px;
     margin: auto;
 } */
+.footer-bottom-1 img{
+    margin-top: 50px;
+}
 .footer-bottom .footer-bottom-1 nav ul{
     list-style: none;
 }
